
# Amber Desert changes and additions:
* Is now made up of Amber Sand and Amber Sandstone.
* Increased amount of Amber "boulders" in the biome.
* Turned down the light levels of all Amber blocks.
* Patches of Amber Clumps generate on walls and ceilings.
* Pointed Amber now generates only on ceilings.
* Tweaked the fog and sky colors to fit the dimension better!

# Ancient Hook changes:
* Ancient Hook now discards when in liquids. (this is to fix strange behaviour with water),
* Ancient Hook now discards when the player is further than 64 blocks away.,
* Ancient Hook now discards when the shift key is pressed.
* Ancient Hook now attaches to blocks way faster as its shoot speed has been increased a lot.
* Added Ancient Hook as loot in Bygone Mineshafts.
* Ancient Hook sounds are planned for 1.3.1!

# The Whiskbill
* A new passive mob found only in the Underhang.
* Will seek out Glow Gourds and devour them, spitting out the Seeds!
* Will retreat from nearby players and poison players that hurt them!
* Temporarily are using Sniffer sounds, but unique sounds are planned for 1.3.1!
* Can be bred with Gourd Slices!


# Technical features:
* Added the new item tag "whiskbill_food"


# Changes to existing features:
* Chiseled Polished Bystone and Byslate are now craftable.
* Underhang water color has been adjusted.
* Underhang ambience now plays 50% less of the time.
* Copperbugs, Pests, and Trilobites are now considered "Arthopods".
* Claystone Farmland is now hydratable by Water.
* Sprinkler now bonemeals crop randomly 20% less.
* Pests now consume crops 20% more.
* Mossy Claystone now boosts Sniffer eggs hatch rates.
* Chantrelle now has a light level of six.
* Montsechia texture has been changed!
* Removed Umber.
* Removed Umber Bricks.


# Bugs fixed:
* Fixed crash related to Mooboos in the Bygone!
* Fixed both Polished Bystone and Polished Byslate family of blocks from not having stonecutter recipes!
* Fixed Big Beak subtitles not being translated!